--- a/eLawsLanding/src/i18n/locales/en.json
+++ b/eLawsLanding/src/i18n/locales/en.json
@@ -603,6 +603,32 @@
         "analyticsOff": "No"
     },
     "components": {
+        "legalDocuments": {
+            "titles": {
+                "terms": "Terms & Conditions",
+                "privacy": "Privacy Policy",
+                "ai": "AI Disclaimer"
+            },
+            "terms": {
+                "intro": "These Terms & Conditions govern your access to and use of eLaws. By creating an account, you agree to comply with these terms and all applicable laws.",
+                "bullet1": "You are responsible for maintaining the confidentiality of your account credentials.",
+                "bullet2": "You must not misuse the service, attempt unauthorized access, or upload unlawful content.",
+                "bullet3": "We may update the service to improve performance, security, or legal compliance.",
+                "outro": "eLaws may suspend or terminate access for violations of these terms or applicable law."
+            },
+            "privacy": {
+                "paragraph1": "We collect only the data needed to create and secure your workspace, process requests, and provide support. This includes account details, usage metadata, and device/browser information.",
+                "paragraph2": "We use data for authentication, service delivery, security monitoring, and to improve product quality. We do not sell your personal data.",
+                "paragraph3": "You can request access, correction, or deletion of your personal data, subject to legal obligations and retention requirements.",
+                "paragraph4": "Essential cookies are required for core functionality. Analytics cookies are optional and controlled through your cookie preferences."
+            },
+            "ai": {
+                "paragraph1": "The eLaws AI assistant is not a lawyer and does not provide legal advice.",
+                "paragraph2": "Any information provided is general and informational only and may not apply to your specific circumstances or jurisdiction.",
+                "paragraph3": "You should consult a licensed attorney before making legal decisions or acting on any AI-generated information."
+            },
+            "close": "Close"
+        },
         "countryPicker": {
             "trigger": "Select a country",
             "dialogTitle": "Select country",
