feat: frontend refactor

--- a/eLawsLanding/src/i18n/locales/en.json
+++ b/eLawsLanding/src/i18n/locales/en.json
@@ -709,6 +709,9 @@
         "confirm": {
             "deleteChat": "Delete chat permanently?",
             "clearChat": "Clear all messages in this chat?"
+        },
+        "actions": {
+            "newChat": "New chat"
         }
     },
     "createCasePage": {
