--- a/eLawsLanding/src/i18n/locales/pl.json
+++ b/eLawsLanding/src/i18n/locales/pl.json
@@ -673,6 +673,9 @@
         "confirm": {
             "deleteChat": "Usunąć rozmowę na stałe?",
             "clearChat": "Wyczyścić wszystkie wiadomości w tej rozmowie?"
+        },
+        "actions": {
+            "newChat": "Nowy czat"
         }
     },
     "createCasePage": {
