refactor: refined ai chat page

--- a/eLawsLanding/src/i18n/locales/en.json
+++ b/eLawsLanding/src/i18n/locales/en.json
@@ -640,7 +640,8 @@
             "saveError": "Failed to save note."
         },
         "loading": {
-            "preparing": "Preparing your workspace…"
+            "preparing": "Preparing your workspace…",
+            "thinking": "Thinking…"
         },
         "tokens": {
             "usage": "{{used}} / {{limit}} legal bandwidth",
