--- a/eLawsLanding/src/i18n/locales/pl.json
+++ b/eLawsLanding/src/i18n/locales/pl.json
@@ -640,7 +640,8 @@
             "saveError": "Nie udało się zapisać notatki."
         },
         "loading": {
-            "preparing": "Przygotowujemy Twoje środowisko…"
+            "preparing": "Przygotowujemy Twoje środowisko…",
+            "thinking": "Myślę…"
         },
         "empty": {
             "countryTitle": "Wybierz jurysdykcję",
